--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -15,7 +15,7 @@
             size="50"
             type="text"
             class="form-control"
-            placeholder="Search"
+            placeholder="Type in 3 or more letters to start a search"
             ng-model="main.searchTerm"
             ng-change="main.search($event)"
             ng-model-options="{debounce: 750}"
