--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -34,7 +34,7 @@
         <a href="{{item.link}}">
           <img class="img-responsive" ng-src="{{item.media.m}}" alt="{{item.title}}">
         </a>
-        <a href="{{item.link}}"><h3 class="clear">{{item.title}}</h3></a>
+        <a href="{{item.link}}"><h3 class="truncate">{{item.title}}</h3></a>
         <i>{{item.author}}</i>
         <div><span class="tag tag-info" ng-repeat="tag in item.tags">{{tag}}</span></div>
       </div>
