- Better error handling to prevent infinite loading ... - Highlight tag that matches the search term for better UX

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -34,9 +34,16 @@
         <a href="{{item.link}}">
           <img class="img-responsive" ng-src="{{item.media.m}}" alt="{{item.title}}">
         </a>
-        <a href="{{item.link}}"><h3 class="truncate">{{item.title}}</h3></a>
+        <a href="{{item.link}}" title="{{item.title}}"><h3 class="truncate">{{item.title}}</h3></a>
         <i>{{item.author}}</i>
-        <div><span class="tag tag-info" ng-repeat="tag in item.tags">{{tag}}</span></div>
+        <div>
+          <span 
+            class="tag tag-info {{tag.isSearchTerm ? 'is-search-term' : ''}}"
+            ng-repeat="tag in item.tags"
+          >
+            {{tag.value}}
+          </span>
+        </div>
       </div>
 
     </div>
