--- a/src/app/index.scss
+++ b/src/app/index.scss
@@ -13,7 +13,7 @@ $icon-font-path: "../../bower_components/bootstrap-sass/assets/fonts/bootstrap/"
 // endbower
 
 .truncate {
-  width: 250px;
+  width: 90%;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -61,6 +61,10 @@ $icon-font-path: "../../bower_components/bootstrap-sass/assets/fonts/bootstrap/"
 
 .tag-info {
   background-color: #5bc0de;
+}
+
+.is-search-term {
+  background-color: #f45f42;
 }
 
 /* Absolute Center Spinner */
