- Prevent form submission triggered by pressing enter which let to undesired page refresh

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -19,6 +19,7 @@
             ng-model="main.searchTerm"
             ng-change="main.search($event)"
             ng-model-options="{debounce: 750}"
+            ng-keydown="($event.which == 13) ? $event.preventDefault() : return;"
             autofocus
           >
         </div>
